Collapse icon fix

--- a/M4/book-store/src/index.css
+++ b/M4/book-store/src/index.css
@@ -25,12 +25,16 @@ button svg {
 }
 
 .active > a.nav-link {
-    color: red!important;
+    color: red !important;
+}
+
+.nav-item a {
+    color: #fff !important;
 }
 
 .navbar-brand svg {
- font-size: 2.5em;
- background: rgba(211, 156, 156, .5);
- border: 1px black solid;
- border-radius: 10px;
+    font-size: 2.5em;
+    background: rgba(211, 156, 156, 0.5);
+    border: 1px black solid;
+    border-radius: 10px;
 }
